[metadata]
name = test_app
version = 0.1.0
author= Tim B.

[options]
package_dir=
    =src
packages=find:
install_requires =
    click>=7.1.2

[options.packages.find]
where=src

[options.extras_require]
dev = 
    black>=21.12b0
    pytest>=6.2.5
    flake8>=4.0.1
    mkdocs>=1.2.3
    mkdocs-material>=8.1.3
    mkdocstrings>=0.16.2

[options.entry_points]
console_scripts = 
    testapp=test_app.cli:main